--- a/css/style.sass
+++ b/css/style.sass
@@ -124,15 +124,19 @@ html,body,#full_container
 				bottom: 0px
 				left: 50%
 				margin-left: -100px
-				.reload					
-					position: relative
-					float: left
-					color: white
-				.next					
-					position: relative
-					float: left
-					color: white
-					margin-left: 20px
+			.reload					
+				position: absolute
+				float: left
+				left: 20px
+				bottom: 20px
+				color: white
+			.next					
+				position: absolute
+				float: left
+				color: white
+				float: left
+				right: 20px
+				bottom: 20px
 			
 
 				
