--- a/index.haml
+++ b/index.haml
@@ -99,10 +99,10 @@
               .active{href:"http://void/10",data_id:"10"}
                 10
             .footer
-              %a.reload{href:"#"}
-                %i.fa.fa-refresh.fa-4x
-              .next
-                %i.fa.fa-share.fa-4x
+            %a.reload{href:"#"}
+              %i.fa.fa-refresh.fa-4x
+            .next
+              %i.fa.fa-share.fa-4x
           #sec_numbers_s2.screen            
             .final_container
               %div.active{data_id:"1"}
@@ -148,10 +148,10 @@
               .active{href:"http://void/10",data_id:"10"}
                 10
             .footer
-              %a.reload{href:"#"}
-                %i.fa.fa-refresh.fa-4x
-              .next
-                %i.fa.fa-share.fa-4x
+            %a.reload{href:"#"}
+              %i.fa.fa-refresh.fa-4x
+            .next
+              %i.fa.fa-share.fa-4x
           #sec_numbers_s3.screen            
             .final_container
               %div.active{data_id:"1"}
@@ -196,10 +196,58 @@
               .active{href:"http://void/10",data_id:"10"}
                 10
             .footer
-              %a.reload{href:"#"}
-                %i.fa.fa-refresh.fa-4x
-              .next
-                %i.fa.fa-share.fa-4x
+            %a.reload{href:"#"}
+              %i.fa.fa-refresh.fa-4x
+            .next
+              %i.fa.fa-share.fa-4x
+          #sec_numbers_s4.screen            
+            .final_container
+              %div.active{data_id:"1"}
+                1
+              %div{data_id:"2"}
+                2
+              %div{data_id:"3"}
+                3
+              %div{data_id:"4"}
+                4
+              %div{data_id:"5"}
+                5
+              %div{data_id:"6"}
+                6
+              %div{data_id:"7"}
+                7
+              %div{data_id:"8"}
+                8
+              %div{data_id:"9"}
+                9
+              %div{data_id:"10"}
+                10
+            .start_container
+              .active{href:"http://void/1",data_id:"1"}
+                1
+              .active{href:"http://void/2",data_id:"2"}
+                2
+              .active{href:"http://void/3",data_id:"3"}
+                3
+              .active{href:"http://void/4",data_id:"4"}
+                4
+              .active{href:"http://void/5",data_id:"5"}
+                5
+              .active{href:"http://void/6",data_id:"6"}
+                6
+              .active{href:"http://void/7",data_id:"7"}
+                7
+              .active{href:"http://void/8",data_id:"8"}
+                8
+              .active{href:"http://void/9",data_id:"9"}
+                9
+              .active{href:"http://void/10",data_id:"10"}
+                10
+            .footer
+            %a.reload{href:"#"}
+              %i.fa.fa-refresh.fa-4x
+            .next
+              %i.fa.fa-share.fa-4x
   %script{src:"js/libs/jquery-1.10.2.js"}
   %script{src:"js/libs/jquery-ui-1.10.4.min.js"}
   %script{src:"js/libs/jquery.ui.touch-punch.min.js"}
